styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');

:root {
    --color-primary: #05141A;
    --color-secondary: #E0E6EB;
    --color-tertiary: #D4FAE3;
    --color-alternate: #94949C;
    --color-white: #ffffff;
    --transition: 0.3s ease;
    --container-medium: 86%;
    --container-large: 90%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
}

html {
    scroll-behavior: smooth;
    font-size: 16px;
}

body {
    font-family: 'Montserrat', sans-serif;
    min-height: 100vh;
    line-height: 1.75;
}

.container {
    margin: 0 auto;
    width: var(--container-large);
}

img {
    width: 100%;
    height: auto;
    object-fit: cover;
    display: block;
}

section {
    padding: 5rem 0;
}

section h2 {
    text-align: center;
    margin-bottom: 5rem;
}

h1 {
    font-size: clamp(1.5rem, 2.5vw, 2.25rem)
}

h1,
h2,
h3,
h4 {
    line-height: 1.2;
    font-weight: 400;
}

h1,
h2,
h3,
p {
    color: var(--color-primary);
}

a {
    color: var(--color-secondary);
    cursor: pointer;
    transition: var(--transition);
}

a:hover {
    color: var(--color-tertiary);
}

.nav-links,
.logo2 {
    display: none;
}

.logo1 {
    font-size: 1.5rem;
    display: block;
}

.btn {
    display: block;
    position: absolute;
    background-color: var(--color-primary);
    color: var(--color-secondary);
    padding: 5px 20px;
    border: 1px solid transparent;
    text-transform: uppercase;
    transition: var(--transition);
}

.btn:hover {
    background-color: transparent;
    color: var(--color-primary);
    border: 1px solid var(--color-primary);
}

html,
body {
    width: auto !important;
    overflow-x: hidden !important
}

/* END OF GENERAL STYLING */

nav[id="mobile-nav"] {
    display: flex;
    justify-content: flex-start;
    gap: 1rem;
    align-items: center;
    background-color: var(--color-primary);
    position: relative;
    top: 0;
    left: 0;
}

button[id="open-sidebar"] {
    cursor: pointer;
    background-color: var(--color-primary);
    color: var(--color-secondary);
    border-color: var(--color-primary);
    position: relative;
    display: block;
}

bento-sidebar[id="sidebar1"] {
    background-color: var(--color-primary);
}

bento-sidebar[id="sidebar1"] li {
    padding: 1rem;
    cursor: pointer;
}

/* END OF MOBILE NAVIGATION STYLING */


section[id="about"] .container {
    display: grid;
    grid-template-columns: minmax(min-content, 1fr);
    place-items: center;
    gap: 1rem;
}

.about-picture {
    aspect-ratio: 1/1;
}

.about-article p:nth-of-type(2) {
    padding-top: 1rem;
}

.about-article svg {
    height: 1rem;
    width: 1rem;
    top: .125em;
    position: relative;
}

/* END OF ABOUT STYLING */

section[id="benefits"] {
    background-color: var(--color-primary);
}

section[id="benefits"] h2,
h3,
.benefits-column {
    color: var(--color-secondary);
}


section[id="benefits"] .container {
    display: grid;
    gap: 1rem;
    grid-template-columns: minmax(min-content, 1fr);
}

article[class="benefits-column"] {
    padding: 1rem;
    border-radius: 2px 16px;
    border: 1px solid var(--color-secondary);
}

article[class="benefits-column"] p {
    color: var(--color-secondary);
    padding-left: 1rem;

}

article[class="benefits-column"] h3 {
    padding-bottom: 0.5rem;
    padding-left: 1rem;
}

article[class="benefits-column"] .svg {
    display: block;
    margin: 0 auto;
}

/* END OF BENEFITS STYLING */

section[class="credit_section"] {
    background-color: var(--color-secondary);
}

section[class="credit_section"] h3,
p {
    color: var(--color-primary);
}

section[class="credit_section"] .container {
    display: grid;
    gap: 1rem;
    grid-template-columns: minmax(min-content, 1fr);
}

section[class="credit_section"] p {
    text-align: left;
}

section[class="credit_section"] h3,
figcaption {
    text-align: center;
}

figure[class="creditcard"] {
    padding: 1rem;
}

figcaption svg {
    height: 1em;
    width: 1em;
    top: .125em;
    position: relative;
}

figcaption {
    padding-top: 2rem;
}

.creditcard figcaption {
    display: flex;
    justify-content: center;
    align-items: center;
}

.image {
    padding: 1rem;
    aspect-ratio: 16/9;
}

/* END OF CREDIT CARDS STYLING */

footer[id="footer"] li {
    list-style: none;
}

footer[id="footer"] {
    background-color: var(--color-primary);
    color: var(--color-secondary);
}

footer[id="footer"] a {
    color: var(--color-secondary);
}

footer[id="footer"] a:hover {
    color: var(--color-tertiary);
}

article[class="footer-column"] p {
    color: var(--color-secondary);
}

.footer-column {
    padding: 1.25rem;
    min-width: 12.5rem;
}

section[id="footer-main"] {
    padding: 1.25rem 1.875rem;
    display: flex;
    flex-wrap: wrap;
}

h2[class="footer-title"] {
    color: var(--color-primary);
    font-size: 1.375rem;
    padding-bottom: 0.625rem;
}

/* END OF GENERAL FOOTER STYLING */

form {
    display: flex;
    flex-wrap: wrap;
}

label[class="label"] input[type="email"] {
    border: 0;
    padding: 0.625rem;
    background-color: var(--color-white);
    margin-top: 0.3125rem;
}

input[type="submit"] {
    background-color: var(--color-tertiary);
    color: var(--color-primary);
    cursor: pointer;
    border: 0;
    padding: 0.625rem 0.9375rem;
    margin-top: 0.3125rem;
    font-weight: 600;
}

/* END OF SIGN UP AREA STYLING */

section[id="footer-socials"] {
    padding: 0 1.875rem 1.25rem;
}

ul[class="footer-icons"] {
    display: flex;
    justify-content: center;
    border-top: 1px var(--color-secondary)solid;
    padding-top: 1.25rem;
}

ul[class="footer-icons"] li {
    margin: 0.5rem;
}

.footer-icons svg:hover {
    fill: var(--color-tertiary);
}

/*  END OF SOCIAL MEDIA STYLING */

section[id="footer-legal"] a {
    color: var(--color-secondary);
}
/* ... */

